Prevent button breakage when word wrapping occurs

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ main a:hover {
 }
 
 main a.button {
+	display: inline-block;
 	text-transform: uppercase;
 	text-align: center;
 	padding: 1em .5em;
