--- a/style.css
+++ b/style.css
@@ -252,6 +252,7 @@ main a:hover {
 }
 
 main a.button {
+	display: inline-block;
 	text-transform: uppercase;
 	text-align: center;
 	padding: 1em .5em;
